added images for nebula and slate

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <img src="images/feldspar.jpg" alt="feldspar">
     </a>
 
-    <img src="images/slate.jpg" alt="slate">
+    <a href="html/slate.html">
+      <img src="images/slate.jpg" alt="slate">
+    </a>
     
     <a href="html/hemp.html">
       <img src="images/hemp_plant.jpg" alt="hemp plant">
@@ -26,7 +28,9 @@
       <img src="images/pillbug.jpeg" alt="pillbug">
     </a>
 
-    <img src="images/lagoon_nebula.jpg" alt="lagoon nebula">
+    <a href="html/nebula.html">
+      <img src="images/lagoon_nebula.jpg" alt="lagoon nebula">
+    </a>
 
     <a href="html/spider.html">
       <img src="images/spider_on_web.jpg" alt="spider on web">
