added files/folders for work, candle, mossle, moss, and dirt_bike; added dirt_bike page with images

--- a/html/dirt.html
+++ b/html/dirt.html
@@ -10,7 +10,9 @@
     <img src="../images/dirt/seedlings.jpg">
     <img src="../images/dirt/cross_section.jpg">
     <img src="../images/dirt/pile.jpg">
-    <img src="../images/dirt/mound_jumping.jpg"> 
+    <a href="dirt_bike.html">
+        <img src="../images/dirt/mound_jumping.jpg"> 
+    </a>
     <img src="../images/dirt/hand.jpg"> 
     <img src="../images/dirt/cracked.jpg"> 
     <img src="../images/dirt/cactus.jpg"> 
