updated pictures to pages for moss, candle, worm, dirt bike

--- a/html/dirt.html
+++ b/html/dirt.html
@@ -8,7 +8,9 @@
     <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
     <img src="../images/dirt/crumbles.jpg">
     <img src="../images/dirt/seedlings.jpg">
-    <img src="../images/dirt/cross_section.jpg">
+    <a href="worms.html">
+        <img src="../images/dirt/cross_section.jpg">
+    </a>
     <img src="../images/dirt/pile.jpg">
     <a href="dirt_bike.html">
         <img src="../images/dirt/mound_jumping.jpg"> 
