--- a/html/fire.html
+++ b/html/fire.html
@@ -16,7 +16,9 @@
     <img src="../images/fire/sage_juniper.jpg">
     <img src="../images/fire/fireplace.jpg">
     <img src="../images/fire/campfire.jpg">
-    <img src="../images/fire/gravity.jpg">
+    <a href="candle.html">
+      <img src="../images/fire/gravity.jpg">
+    </a>
     <img src="../images/fire/coals.jpeg">
   </body>
 </html>
