--- a/html/quartz.html
+++ b/html/quartz.html
@@ -8,7 +8,9 @@
     <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
     <img src="../images/quartz/Quartz_Tibet.jpg">
     <img src="../images/quartz/quartz_limestone.jpg">
-    <img src="../images/quartz/herkimer_diamond.jpg">
+    <a href="moss.html">
+        <img src="../images/quartz/herkimer_diamond.jpg">
+    </a>
     <img src="../images/quartz/ametrine.jpg">
     <img src="../images/quartz/blue_rose_quartz_outdoors.jpg">
     <img src="../images/quartz/large_rose_quartz.jpg">
