removed buttons and made top left image same as previous page, and clicking on that image goes back to the previous page

--- a/html/candle.html
+++ b/html/candle.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='fire.html'" value='click here to go back'>
-    <img src="../images/candle/birds.jpg">
+    <a href="fire.html">
+      <img src="../images/fire/gravity.jpg">
+    </a>
     <img src="../images/candle/candle_background.jpeg">
     <img src="../images/candle/dark.jpg">
     <img src="../images/candle/diy.jpeg">
