--- a/html/cloud.html
+++ b/html/cloud.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/cloud/cirrus.jpg">
+    <a href="../index.html">
+      <img src="../images/cloud.jpg">
+    </a>
     <img src="../images/cloud/dark.jpg">
     <img src="../images/cloud/desert.jpg">
     <img src="../images/cloud/lightning.jpg">
