--- a/html/dirt.html
+++ b/html/dirt.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/dirt/crumbles.jpg">
+    <a href="../index.html">
+      <img src="../images/dirt.png">
+    </a>
     <img src="../images/dirt/seedlings.jpg">
     <a href="worms.html">
         <img src="../images/dirt/cross_section.jpg">
