--- a/html/dirt_bike.html
+++ b/html/dirt_bike.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='dirt.html'" value='click here to go to back'>
-    <img src="../images/dirt_bike/birds_eye.jpg">
+    <a href="dirt.html">
+      <img src="../images/dirt/mound_jumping.jpg">
+    </a>
     <img src="../images/dirt_bike/blue_sky.jpg">
     <img src="../images/dirt_bike/course.jpg">
     <img src="../images/dirt_bike/dust.jpeg">
