--- a/html/feldspar.html
+++ b/html/feldspar.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/feldspar/amazonite.jpg">
+    <a href="../index.html">
+      <img src="../images/feldspar.jpg">
+    </a>
     <img src="../images/feldspar/arkose.jpg">
     <img src="../images/feldspar/cleavage.jpg">
     <img src="../images/feldspar/k_feldspar.jpg">
