--- a/html/fire.html
+++ b/html/fire.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/fire/grass_fire.jpg">
+    <a href="../index.html">
+      <img src="../images/fire.jpg">
+    </a>
     <img src="../images/fire/fire_tornado.jpg">
     <img src="../images/fire/flower.jpg">
     <img src="../images/fire/garden_bowl.jpg">
