--- a/html/hemp.html
+++ b/html/hemp.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/hemp/hemp_field_France.jpeg">
+    <a href="../index.html">
+      <img src="../images/hemp_plant.jpg">
+    </a>
     <img src="../images/hemp/hemp_seed.jpg">
     <img src="../images/hemp/whole_hemp_seed.jpg">
     <img src="../images/hemp/hemp_stem.jpg">
