--- a/html/moon.html
+++ b/html/moon.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/moon/full_moon.jpg">
+    <a href="../index.html">
+      <img src="../images/moon.jpg">
+    </a>
     <img src="../images/moon/lunar_eclipse.jpeg">
     <img src="../images/moon/mid_phase.jpg">
     <img src="../images/moon/near.jpg">
