--- a/html/moss.html
+++ b/html/moss.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='quartz.html'" value='click here to go to go back'>
-    <img src="../images/moss/arctic.jpg">
+    <a href="quartz.html">
+      <img src="../images/quartz/herkimer_diamond.jpg">
+    </a>
     <img src="../images/moss/british_soldier.jpg">
     <img src="../images/moss/log.jpg">
     <img src="../images/moss/ocean_stone.jpg">
