--- a/html/nebula.html
+++ b/html/nebula.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/nebula/carina.jpg">
+    <a href="../index.html">
+      <img src="../images/lagoon_nebula.jpg">
+    </a>
     <img src="../images/nebula/cats_eye.jpg">
     <img src="../images/nebula/crab.jpg">
     <img src="../images/nebula/emission.jpg">
