--- a/html/quartz.html
+++ b/html/quartz.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/quartz/Quartz_Tibet.jpg">
+    <a href="../index.html">
+      <img src="../images/quartz.jpg">
+    </a>
     <img src="../images/quartz/quartz_limestone.jpg">
     <a href="moss.html">
         <img src="../images/quartz/herkimer_diamond.jpg">
