--- a/html/slate.html
+++ b/html/slate.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/slate/blueish.jpg">
+    <a href="../index.html">
+      <img src="../images/slate.jpg">
+    </a>
     <img src="../images/slate/brick.jpeg">
     <img src="../images/slate/candle.jpg">
     <img src="../images/slate/cone.jpg">
