--- a/html/spider.html
+++ b/html/spider.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/spider/gasteracantha_versicolor.jpg">
+    <a href="../index.html">
+      <img src="../images/spider_on_web.jpg">
+    </a>
     <img src="../images/spider/spider_web.jpg">
     <img src="../images/spider/crab_spider.jpg">
     <img src="../images/spider/spider_predator.jpg">
