--- a/html/worms.html
+++ b/html/worms.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <input type=button onClick="location.href='../index.html'" value='click here to go to main page'>
-    <img src="../images/worms/bird.jpg">
+    <a href="dirt.html">
+      <img src="../images/dirt/cross_section.jpg">
+    </a>
     <img src="../images/worms/compost.jpg">
     <img src="../images/worms/dirt.jpeg">
     <img src="../images/worms/fish.jpg">
