--- a/html/dirt.html
+++ b/html/dirt.html
@@ -16,7 +16,9 @@
     <a href="dirt_bike.html">
         <img src="../images/dirt/mound_jumping.jpg"> 
     </a>
-    <img src="../images/dirt/hand.jpg"> 
+    <a href="hands.html">
+      <img src="../images/dirt/hand.jpg">
+    </a>
     <img src="../images/dirt/cracked.jpg"> 
     <img src="../images/dirt/cactus.jpg"> 
     <img src="../images/dirt/red_dirt.jpg">
