experimenting with connecting the images between different pages by adding links to pages when clicking on images

--- a/html/candle.html
+++ b/html/candle.html
@@ -11,7 +11,9 @@
     <img src="../images/candle/candle_background.jpeg">
     <img src="../images/candle/dark.jpg">
     <img src="../images/candle/diy.jpeg">
-    <img src="../images/candle/hot_cocoa.jpg">
+    <a href="slate.html">
+      <img src="../images/slate/candle.jpg">
+    </a>
     <img src="../images/candle/intricate.jpg">
     <img src="../images/candle/judaica.jpg">
     <img src="../images/candle/lotus.jpg">
