--- a/html/hemp.html
+++ b/html/hemp.html
@@ -12,7 +12,9 @@
     <img src="../images/hemp/whole_hemp_seed.jpg">
     <img src="../images/hemp/hemp_stem.jpg">
     <img src="../images/hemp/hemp_shorts.jpg">
-    <img src="../images/hemp/hemp_fiber_board.jpg">
+    <a href="wood.html">
+      <img src="../images/hemp/hemp_fiber_board.jpg">
+    </a>
     <img src="../images/hemp/insulation_blocks.gif">
     <img src="../images/hemp/rope.jpg">
     <img src="../images/hemp/dense_growth.jpg">
