--- a/html/nebula.html
+++ b/html/nebula.html
@@ -9,7 +9,9 @@
       <img src="../images/lagoon_nebula.jpg">
     </a>
     <img src="../images/nebula/cats_eye.jpg">
-    <img src="../images/nebula/crab.jpg">
+    <a href="explosion.html">
+      <img src="../images/nebula/crab.jpg">
+    </a>
     <img src="../images/nebula/emission.jpg">
     <img src="../images/nebula/garren.jpg">
     <img src="../images/nebula/horsehead.jpg">
