--- a/html/wood.html
+++ b/html/wood.html
@@ -12,7 +12,7 @@
     <img src="../images/wood/earlywood.jpg">
     <img src="../images/wood/coconut_palm_trunks.jpg">
     <img src="../images/wood/prayer_bead.jpg">
-    <img src="../images/wood/stairs.jpg">
+    <img src="../images/hemp/hemp_fiber_board.jpg">
     <img src="../images/wood/chips.jpg">
     <img src="../images/wood/legs.jpg">
     <img src="../images/wood/zebra.jpg">
