added more everything, pictures, updated stylesheets, html pages, links

--- a/html/cloud.html
+++ b/html/cloud.html
@@ -10,12 +10,16 @@
     </a>
     <img src="../images/cloud/dark.jpg">
     <img src="../images/cloud/desert.jpg">
-    <img src="../images/cloud/lightning.jpg">
     <img src="../images/cloud/nepal.jpg">
+    <a href="fire.html">
+      <img src="../images/cloud/lightning.jpg">
+    </a>
     <img src="../images/cloud/ocean.jpg">
     <img src="../images/cloud/pier.jpg">
     <img src="../images/cloud/puffs.jpeg">
-    <img src="../images/cloud/sand.jpeg">
+    <a href="sand.html">
+      <img src="../images/cloud/sand.jpeg">
+    </a>
     <img src="../images/cloud/shelf.jpg">
     <img src="../images/cloud/suck.jpg">
     <img src="../images/cloud/view.jpg">
