--- a/html/dirt_bike.html
+++ b/html/dirt_bike.html
@@ -14,7 +14,9 @@
     <img src="../images/dirt_bike/flying.jpg">
     <img src="../images/dirt_bike/helmet.jpg">
     <img src="../images/dirt_bike/holding.jpg">
-    <img src="../images/dirt_bike/hop.jpg">
+    <a href="leap.html">
+      <img src="../images/dirt_bike/hop.jpg">
+    </a>
     <img src="../images/dirt_bike/jump.jpg">
     <img src="../images/dirt_bike/lean.jpg">
     <img src="../images/dirt_bike/mother_daughter.jpg">
