--- a/html/explosion.html
+++ b/html/explosion.html
@@ -12,7 +12,9 @@
     <img src="../images/explosion/cloud.jpg">
     <img src="../images/explosion/desert.jpg">
     <img src="../images/explosion/distance.jpg">
-    <img src="../images/explosion/explosion.jpg">
+    <a href="fire.html">
+      <img src="../images/explosion/explosion.jpg">
+    </a>
     <img src="../images/explosion/mountains.jpg">
     <img src="../images/explosion/nuke.jpg">
     <img src="../images/explosion/old.jpg">
