--- a/html/fire.html
+++ b/html/fire.html
@@ -11,7 +11,9 @@
     <img src="../images/fire/fire_tornado.jpg">
     <img src="../images/fire/flower.jpg">
     <img src="../images/fire/garden_bowl.jpg">
-    <img src="../images/fire/road_smoke.jpg">
+    <a href="smoke.html">
+      <img src="../images/fire/road_smoke.jpg">
+    </a>
     <img src="../images/fire/pit.jpg">
     <img src="../images/fire/ceremony.jpg">
     <img src="../images/fire/sage_juniper.jpg">
