--- a/html/hands.html
+++ b/html/hands.html
@@ -18,7 +18,9 @@
     <img src="../images/hands/nails.jpg">
     <img src="../images/hands/open.jpg">
     <img src="../images/hands/point.png">
-    <img src="../images/hands/rain.jpg">
+    <a href="cloud.html">
+      <img src="../images/hands/rain.jpg">
+    </a>
 
   </body>
 </html>
