--- a/html/pillbug.html
+++ b/html/pillbug.html
@@ -11,7 +11,9 @@
     <img src="../images/pillbug/bunch.jpg">
     <img src="../images/pillbug/climb.jpg">
     <img src="../images/pillbug/crawl.JPG">
-    <img src="../images/pillbug/curl.jpg">
+    <a href="armor.html">
+      <img src="../images/pillbug/curl.jpg">
+    </a>
     <img src="../images/pillbug/forward.jpeg">
     <img src="../images/pillbug/jump.jpg">
     <img src="../images/pillbug/kids.jpg">
