added purple page (etc)

--- a/html/quartz.html
+++ b/html/quartz.html
@@ -12,7 +12,9 @@
     <a href="moss.html">
         <img src="../images/quartz/herkimer_diamond.jpg">
     </a>
-    <img src="../images/quartz/ametrine.jpg">
+    <a href="purple.html">
+      <img src="../images/quartz/ametrine.jpg">
+    </a>
     <img src="../images/quartz/blue_rose_quartz_outdoors.jpg">
     <img src="../images/quartz/large_rose_quartz.jpg">
     <img src="../images/quartz/quartz_peterson.jpg">
